--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         // 3. Costruzione del Corpo (Body)
         let body = `Rapportino di intervento tecnico relativo a:\n\n`;
         body += `Cliente: ${cliente}\n`;
-        body += `Tecnico Intervento: ${tecnico}\n`;
+        body += `Tecnico: ${tecnico}\n`;
         body += `Data: ${data}\n\n`;
         body += `VEDI ALLEGATO`;
 
@@ -357,4 +357,5 @@
 
 </script>
 </body>
+
 </html>
