--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="field-group">
-        <label for="note">Note sull'Intervento:</label>
+        <label for="note">Note:</label>
         <textarea id="note" name="note"></textarea>
     </div>
 
@@ -285,4 +285,5 @@
 </body>
 
 </html>
+
 
